--- a/ML_Scikit_Learn_AcuteInhal_mordred_practice.ipynb
+++ b/ML_Scikit_Learn_AcuteInhal_mordred_practice.ipynb
@@ -1265,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1273,29 +1273,29 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix for Fold 1:\n",
-      "[[2 0]\n",
-      " [1 1]]\n",
+      "[[48  9]\n",
+      " [17 35]]\n",
       "Confusion Matrix for Fold 2:\n",
-      "[[0 2]\n",
-      " [1 0]]\n",
+      "[[44 13]\n",
+      " [20 31]]\n",
       "Confusion Matrix for Fold 3:\n",
-      "[[2 0]\n",
-      " [0 1]]\n",
+      "[[43 13]\n",
+      " [21 31]]\n",
       "Confusion Matrix for Fold 4:\n",
-      "[[1 0]\n",
-      " [1 1]]\n",
+      "[[46 10]\n",
+      " [16 36]]\n",
       "Confusion Matrix for Fold 5:\n",
-      "[[1 0]\n",
-      " [0 2]]\n",
-      "Overall CV Accuracy: 0.6833333333333333\n",
-      "Overall CV AUC: 0.6\n",
-      "Overall CV Precision: 0.8\n",
-      "Overall CV Recall (Sensitivity): 0.6\n",
-      "Overall CV F1 Score: 0.6666666666666666\n",
-      "Overall CV Specificity: 0.8\n",
-      "Overall CV PPV (Positive Predictive Value): 0.8\n",
-      "Overall CV NPV (Negative Predictive Value): 0.6333333333333333\n",
-      "Overall CV CCR (Correct Classification Rate): 0.7\n"
+      "[[44 12]\n",
+      " [16 36]]\n",
+      "Overall CV Accuracy: 0.7282195039075772\n",
+      "Overall CV AUC: 0.7864174482208538\n",
+      "Overall CV Precision: 0.7474308300395257\n",
+      "Overall CV Recall (Sensitivity): 0.6523378582202112\n",
+      "Overall CV F1 Score: 0.6964650912996777\n",
+      "Overall CV Specificity: 0.7978070175438596\n",
+      "Overall CV PPV (Positive Predictive Value): 0.7474308300395257\n",
+      "Overall CV NPV (Negative Predictive Value): 0.714621071133168\n",
+      "Overall CV CCR (Correct Classification Rate): 0.7250724378820353\n"
      ]
     }
    ],
@@ -1414,7 +1414,7 @@
    ],
    "source": [
     "import joblib\n",
-    "joblib.dump(best_model, 'E:/stoptox-master/stoptox-master/modeling/Projeto_2_Acute_Inhalation/model/model_toxic/Modelo_inhalation_SVM_modred_toxic_KU_50.pkl',compress=9)"
+    "joblib.dump(best_model, 'E:/stoptox-master/stoptox-master/modeling/Projeto_2_Acute_Inhalation/model/model_toxic/Modelo_inhalation_SVM_modred_toxic.pkl',compress=9)"
    ]
   },
   {
