--- a/ML_Scikit_Learn_5.1 - macckeys_practice.ipynb
+++ b/ML_Scikit_Learn_5.1 - macckeys_practice.ipynb
@@ -1253,7 +1253,7 @@
     "}\n",
     "\n",
     "# Define the cross-validator as before\n",
-    "cv = StratifiedShuffleSplit(n_splits=2, test_size=0.5, random_state=24)\n",
+    "cv = StratifiedShuffleSplit(n_splits=5, test_size=0.2, random_state=24)\n",
     "\n",
     "# Define the scoring function using Cohen's Kappa Score with quadratic weighting\n",
     "kappa_scorer = make_scorer(cohen_kappa_score, weights='quadratic')\n",
@@ -1302,7 +1302,7 @@
     "}\n",
     "\n",
     "# Define the cross-validator\n",
-    "cv = StratifiedShuffleSplit(n_splits=2, test_size=0.5, random_state=24)\n",
+    "cv = StratifiedShuffleSplit(n_splits=5, test_size=0.2, random_state=24)\n",
     "\n",
     "# Define the scoring function using Cohen's Kappa Score with quadratic weighting\n",
     "kappa_scorer = make_scorer(cohen_kappa_score, weights='quadratic')\n",
@@ -1353,7 +1353,7 @@
     "}\n",
     "\n",
     "# Define the cross-validator\n",
-    "cv = StratifiedShuffleSplit(n_splits=2, test_size=0.5, random_state=24)\n",
+    "cv = StratifiedShuffleSplit(n_splits=5, test_size=0.2, random_state=24)\n",
     "\n",
     "# Define the scoring function using Cohen's Kappa Score with quadratic weighting\n",
     "kappa_scorer = make_scorer(cohen_kappa_score, weights='quadratic')\n",
@@ -1387,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1395,20 +1395,29 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix for Fold 1:\n",
-      "[[105  36]\n",
-      " [ 42  88]]\n",
+      "[[50  7]\n",
+      " [22 30]]\n",
       "Confusion Matrix for Fold 2:\n",
-      "[[104  37]\n",
-      " [ 52  77]]\n",
-      "Overall CV Accuracy: 0.6912737460707941\n",
-      "Overall CV AUC: 0.752736226882689\n",
-      "Overall CV Precision: 0.6925580079230333\n",
-      "Overall CV Recall (Sensitivity): 0.6369111508646392\n",
-      "Overall CV F1 Score: 0.663329120896925\n",
-      "Overall CV Specificity: 0.7411347517730495\n",
-      "Overall CV PPV (Positive Predictive Value): 0.6925580079230333\n",
-      "Overall CV NPV (Negative Predictive Value): 0.6904761904761905\n",
-      "Overall CV CCR (Correct Classification Rate): 0.6890229513188444\n"
+      "[[37 20]\n",
+      " [13 38]]\n",
+      "Confusion Matrix for Fold 3:\n",
+      "[[47  9]\n",
+      " [17 35]]\n",
+      "Confusion Matrix for Fold 4:\n",
+      "[[42 14]\n",
+      " [19 33]]\n",
+      "Confusion Matrix for Fold 5:\n",
+      "[[40 16]\n",
+      " [19 33]]\n",
+      "Overall CV Accuracy: 0.7116038056405029\n",
+      "Overall CV AUC: 0.7687121272260591\n",
+      "Overall CV Precision: 0.7274069634776059\n",
+      "Overall CV Recall (Sensitivity): 0.6528657616892911\n",
+      "Overall CV F1 Score: 0.6841407379321582\n",
+      "Overall CV Specificity: 0.7659774436090225\n",
+      "Overall CV PPV (Positive Predictive Value): 0.7274069634776059\n",
+      "Overall CV NPV (Negative Predictive Value): 0.7070620272606588\n",
+      "Overall CV CCR (Correct Classification Rate): 0.7094216026491568\n"
      ]
     }
    ],
@@ -1425,7 +1434,7 @@
     "np.random.seed(seed)\n",
     "\n",
     "# Number of splits for cross-validation\n",
-    "n_splits = 2\n",
+    "n_splits = 5\n",
     "\n",
     "# Prepare cross-validation\n",
     "cv = StratifiedKFold(n_splits=n_splits, shuffle=True, random_state=seed)\n",
